@@ -19,6 +19,11 @@ ___________________________________
 
 ChangeLog about GNU GLOBAL
 
+February 27 2010, Hideki IWAMOTO
+
+	* Added support of function layer plugin parser.
+	  Libtool 2.2.6b or later is required to build CVS version.
+
 February 3 2010, Shigio YAMAGUCHI
 
 	* Use invisible temporary files instead of visible files (htags/assoc.c).
